# final

./: .env  Cargo.toml
frontend/: index.html  jest.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  config.ts  index.css  vite-env.d.ts
frontend/src/components/chat/: Chatbot.tsx  ChatbotButton.tsx
frontend/src/components/layout/: DashboardLayout.tsx  Logo.tsx  Navbar.tsx  NavbarHome.tsx  Sidebar.tsx
frontend/src/components/routes/: PrivateRoute.tsx  PublicRoute.tsx
frontend/src/contexts/: AuthContext.tsx  UIContext.tsx
frontend/src/contracts/: MentorMatch.json
frontend/src/lib/: api.ts  contractUtils.ts  groqClient.ts  web3.ts
frontend/src/lib/__tests__/: groqClient.test.ts
frontend/src/pages/: HomePage.tsx  NotFound.tsx
frontend/src/pages/auth/: Login.tsx  Register.tsx
frontend/src/pages/chain-mines/: ChainMines.tsx
frontend/src/pages/chat/: ChatBot.tsx
frontend/src/pages/dashboard/: Dashboard.tsx  HybridDashboard.tsx  MentorDashboard.tsx  StudentDashboard.tsx
frontend/src/pages/resources/: Resources.tsx
src/: lib.rs  main.rs  routes.rs
