[package]
name = "web3_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
ethers = "=0.6.1"

[dependency-overrides]
home = "=0.5.10"
litemap = "=0.7.4"
zerofrom = "=0.1.5"
base64ct = "=1.6.0"

